components/button/server.css
/* Button */

.button {
  display: inline-flex;

  column-gap: 0.3125em;
  align-items: center;
  justify-content: center;

  padding: 0.5em;
  margin: 0;

  font-family: var(--font-family-text);
  font-size: 0.875em;
  font-weight: 450;

  line-height: var(--font-line-ui);
  vertical-align: middle;

  color: var(--color-text-primary);

  text-decoration: none;

  cursor: pointer;

  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 0.25rem;

  /* Primary */

  &[data-variant="primary"] {
    color: light-dark(var(--color-white), var(--color-black));
    background-color: light-dark(var(--color-black), var(--color-white));

    &:hover {
      background-color: light-dark(var(--color-gray-40), var(--color-gray-60));
    }

    &[data-action="positive"] {
      color: var(--color-white);
      background-color: light-dark(
        var(--color-green-50),
        var(--color-green-20)
      );

      &:hover {
        background-color: light-dark(
          var(--color-green-20),
          var(--color-green-50)
        );
      }
    }

    &[data-action="negative"] {
      color: var(--color-white);
      background-color: light-dark(var(--color-red-50), var(--color-red-20));

      &:hover {
        background-color: light-dark(var(--color-red-20), var(--color-red-50));
      }
    }
  }

  /* Secondary */

  &[data-variant="secondary"] {
    border-color: currentcolor;

    &:hover {
      background-color: light-dark(var(--color-gray-80), var(--color-gray-40));
    }

    &[data-action="positive"] {
      color: light-dark(var(--color-green-50), var(--color-green-80));

      &:hover {
        color: light-dark(var(--color-green-20), var(--color-green-80));
        background-color: light-dark(
          var(--color-green-90),
          var(--color-green-10)
        );
      }
    }

    &[data-action="negative"] {
      color: light-dark(var(--color-red-50), var(--color-red-80));

      &:hover {
        color: light-dark(var(--color-red-20), var(--color-red-80));
        background-color: light-dark(var(--color-red-90), var(--color-red-10));
      }
    }
  }

  /* Plain */

  &[data-variant="plain"] {
    &:hover {
      background-color: light-dark(var(--color-gray-80), var(--color-gray-40));
    }

    &[data-action="positive"] {
      color: light-dark(var(--color-green-50), var(--color-green-80));

      &:hover {
        color: light-dark(var(--color-green-20), var(--color-green-80));
        background-color: light-dark(
          var(--color-green-90),
          var(--color-green-10)
        );
      }
    }

    &[data-action="negative"] {
      color: light-dark(var(--color-red-50), var(--color-red-80));

      &:hover {
        color: light-dark(var(--color-red-20), var(--color-red-80));
        background-color: light-dark(var(--color-red-90), var(--color-red-10));
      }
    }
  }

  /* Disabled */

  &[disabled] {
    color: light-dark(var(--color-gray-40), var(--color-gray-60)) !important;

    cursor: default;

    background-color: light-dark(
      var(--color-gray-80),
      var(--color-gray-20)
    ) !important;
    border-color: transparent;
  }

  /* Icon */

  .icon {
    /* fix whitespace messing with layout */
    display: flex;
  }

  svg {
    width: 1.25em;
    height: 1.25em;
  }

  /* Label */

  .label {
    padding-block: 0.125em;
    padding-inline: 0.0625em;
  }
}

